fix:修改springai版本，优化pom配置，修改redis缓存前缀